--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
         <!--nav header-->
         <div class="nav-header">
           <img src="./logo.svg" class="logo" alt="logo">
+          <input type="checkbox" id="check">
           <button class="nav-toggle">
-            <i class="fas fa-bars"></i>
+            <label for="check"><i class="fas fa-bars"></i></label>
           </button>
         </div>
         <!-- links -->
