--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     />
+    <script src="https://kit.fontawesome.com/00f365168b.js" crossorigin="anonymous"></script>
 
     <!-- styles -->
     <link rel="stylesheet" href="styles.css" />
@@ -18,11 +19,9 @@
       <div class="nav-center">
         <!--nav header-->
         <div class="nav-header">
-          <img src="./logo.svg" class="logo" alt="logo">
+          <img src="./logo.png" class="logo" alt="logo">
           <input type="checkbox" id="check">
-          <button class="nav-toggle">
-            <label for="check"><i class="fas fa-bars"></i></label>
-          </button>
+            <label for="check" class="nav-toggle"><i class="fas fa-bars"></i></label>
         </div>
         <!-- links -->
       <ul class="links">
@@ -42,7 +41,7 @@
       <!-- social media -->
       <ul class="social-icons">
         <li>
-          <a href="https://www.twitter.com">
+          <a href="https://www.facebook.com">
             <i class="fab fa-facebook"></i>
           </a>
         </li>
@@ -52,18 +51,13 @@
           </a>
         </li>
         <li>
-          <a href="https://www.twitter.com">
-            <i class="fab fa-behance"></i>
+          <a href="https://www.github.com">
+            <i class="fa-brands fa-github"></i>
           </a>
         </li>
         <li>
-          <a href="https://www.twitter.com">
+          <a href="https://www.linkedin.com">
             <i class="fab fa-linkedin"></i>
-          </a>
-        </li>
-        <li>
-          <a href="https://www.twitter.com">
-            <i class="fab fa-sketch"></i>
           </a>
         </li>
       </ul>
